<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/searchBarLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg" >

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/HINT"
            android:imeOptions="actionGo"
            android:singleLine="true" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CANCEL_BTN" />

    </LinearLayout>
    
<!-- android:xmlns="http://schemas.android.com/apk/res/android" -->
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchBarLL"
        android:layout_above="@+id/toolBarLL"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:id="@+id/toolBarLL"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bg" >

       <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >


            <Button
                android:id="@+id/account_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/account"
                android:gravity="center"
                android:ellipsize="middle"
                android:text="" />

            <TextView
                android:id="@+id/TextView04"
                style="@style/toolbar_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:ellipsize="middle"
                android:text="@string/ACCOUNT"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
          

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/my_loc_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point"
                android:gravity="center"
                android:ellipsize="middle"
                android:text="" />

            <TextView
                android:id="@+id/TextView03"
                style="@style/toolbar_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:gravity="center"
                android:lines="1"
                android:ellipsize="middle"
                android:text="@string/LOCATION"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/hail_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/hail"
                android:gravity="center"
                android:ellipsize="middle"
                android:text="" />

            <TextView
                android:id="@+id/TextView02"
                style="@style/toolbar_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="middle"
                android:lines="1"
                android:text="@string/HALE"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/call_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/call"
                android:gravity="center"
                android:ellipsize="middle"
                android:text="" />

            <TextView
                android:id="@+id/TextView01"
                style="@style/toolbar_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="middle"
                android:lines="1"
                android:text="@string/CALL"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/settings_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings"
                android:gravity="center"
                android:ellipsize="middle"
                android:text="" />

            <TextView
                android:id="@+id/textView1"
                style="@style/toolbar_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="middle"
                android:lines="1"
                android:text="@string/menu_settings"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>